# aaetherengine

./: CMakeLists.txt  aae_entry.c  aae_main.c  aae_main.s  build_system.sh  git_push.sh  license  main.c  main.cpp
CMakeModules/: Findaae_utils.cmake
aae_utils/: aae_allocator.h  aae_allocators.c  aae_allocators.h  aae_defines.h  aae_embeded.h  aae_lib_allocator.h  aae_linked_list.def  aae_linked_list.h  aae_linked_list_type_generation.h  aae_memory.h  aae_memory_allocator.h  aae_types.h  aae_types.hpp
aae_utils/assert/: aae_assert.c  aae_assert.h
aae_utils/ctype/: aae_ctype.c  aae_ctype.h
aae_utils/defs/: aae_linked_list.def  aae_rb_tree.def
aae_utils/error/: aae_error.c  aae_error.h
aae_utils/linux/: platform.c
aae_utils/math/: aae_math.c  aae_math.h
aae_utils/misc/: aae_allocator_implementations.h  aae_defines.h  aae_embeded.h  aae_filestream.h  aae_memory.h  aae_new.h  aae_ringbuffer.h  aae_type_traits.h  aae_types.h
aae_utils/string/: aae_string.c  aae_string.h
asm/x64/linux/: aae_main.s
asm/x86/: aae_main.s
asm/x86/linux/: aae_main.s
bs/: build_library.sh  build_system.sh
bs/linux/: build_allocator_library.sh  build_library.sh  build_system.sh  git_push.sh
lib/: aae_allocator.c  aae_allocator_lib.c  aae_lib_allocator.h  aae_malloc.c  aae_malloc.h  aae_pp_enum.h  build_malloc.sh
os/linux/: aae_os_functions.h
